# umbral

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  README.md  TRADEMARK.md  __data.json  arch.md  deny.toml  django-shadow-rust-plan.md  index.html  release-plz.toml  umbra-PRD.md
crates/: Cargo.toml  README.md
crates/umbra/: Cargo.toml
crates/umbra-casing/: Cargo.toml
crates/umbra-casing/src/: lib.rs
crates/umbra-cli/: Cargo.toml
crates/umbra-cli/src/: lib.rs  main.rs  scaffold.rs
crates/umbra-cli/tests/: dispatch_smoke.rs  scaffold.rs
crates/umbra-core/: Cargo.toml
crates/umbra-core/src/: app.rs  auth_contract.rs  backend.rs  backup.rs  check.rs  cli.rs  cors.rs  db.rs  errors.rs  fixtures.rs  forms.rs  hosts.rs  inspect.rs  lib.rs  middleware.rs  migrate.rs  pagination.rs  plugin.rs  ratelimit.rs  routes.rs  settings.rs  signals.rs  slash.rs  static_files.rs  storage.rs  templates.rs  timezone.rs  web.rs
crates/umbra-core/tests/: aggregates.rs  annotate_autodiscover.rs  annotate_count.rs  array_field.rs  array_ops.rs  atomic_terminals.rs  backend.rs  backup.rs  backup_json.rs  backup_postgres.rs  builder.rs  builder_defaults.rs  bulk_signals.rs  bulk_update_raw.rs  compression.rs  cross_db_fk.rs  csrf_context.rs  csv_import.rs  db_functions.rs  db_pool_config.rs  decimal_field.rs  dyn_error_enum.rs  dyn_insert_tx.rs  dyn_m2m_batched.rs  dyn_queryset_tx.rs  dyn_select_related_nested.rs  dyn_signals.rs  dyn_string_pk_include.rs  earliest_latest_distinct.rs  error_handling.rs  error_pages.rs  exclude.rs  f_expressions.rs  file_field_check_missing_storage.rs  file_field_check_present_storage.rs  file_field_roundtrip.rs  file_field_storage_resolution.rs  file_image_field.rs  filter_in_strings.rs  filter_m2m.rs  (+120 more)
crates/umbra-macros/: Cargo.toml
crates/umbra-macros/src/: lib.rs
crates/umbra-macros/tests/: display_icon.rs  task_macro.rs
crates/umbra-testing/: Cargo.toml
crates/umbra-testing/src/: lib.rs
crates/umbra-testing/tests/: factory.rs  integration.rs
crates/umbra/src/: lib.rs
crates/umbra/tests/: models_macro.rs
crates/umbral/: CHANGELOG.md  Cargo.toml  README.md
crates/umbral-casing/: CHANGELOG.md  Cargo.toml  README.md
crates/umbral-casing/src/: lib.rs
crates/umbral-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/umbral-cli/src/: lib.rs  main.rs  scaffold.rs
crates/umbral-cli/tests/: app_command_dispatch.rs  app_command_no_plugins.rs  builtin_shadowing.rs  dispatch_smoke.rs  migrate_destructive_gate.rs  on_ready_deferred.rs  on_ready_fires_for_live_command.rs  on_ready_skips_migrate.rs  scaffold.rs  scaffold_compiles.rs  standalone_commands.rs  version_pins.rs
crates/umbral-core/: CHANGELOG.md  Cargo.toml  README.md
crates/umbral-core/src/: api_error.rs  app.rs  auth_contract.rs  backend.rs  backup.rs  check.rs  cli.rs  codegen.rs  cors.rs  db.rs  errors.rs  fixtures.rs  forms.rs  hosts.rs  inspect.rs  lib.rs  middleware.rs  migrate.rs  pagination.rs  plugin.rs  ratelimit.rs  routes.rs  settings.rs  shutdown.rs  signals.rs  slash.rs  static_files.rs  storage.rs  templates.rs  timezone.rs  typegen.rs  validate.rs  web.rs
crates/umbral-core/templates/: _pagination.html
crates/umbral-core/tests/: aggregates.rs  alter_column_fk_string_pk.rs  alter_column_inbound_fk.rs  alter_inbound_fk_engine.rs  annotate_autodiscover.rs  annotate_count.rs  api_error_in_html_handlers.rs  array_field.rs  array_ops.rs  atomic_terminals.rs  audit_trail.rs  auto_migrate_on_serve.rs  auto_models.rs  backend.rs  backup.rs  backup_fk_order.rs  backup_json.rs  backup_postgres.rs  begin_immediate.rs  builder.rs  bulk_signals.rs  bulk_update_raw.rs  case_insensitive_field.rs  choices_only_alter_sqlite.rs  choices_typed_filter.rs  choices_varchar_pg.rs  column_comments.rs  combined_alter_add_drop_sqlite.rs  compression.rs  create_delete_signals.rs  cross_db_fk.rs  csrf_context.rs  csv_import.rs  database_views.rs  datetime_project_timezone.rs  datetime_utc_offsets.rs  db_functions.rs  db_pool_config.rs  db_pool_env.rs  decimal_field.rs  (+177 more)
crates/umbral-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/umbral-macros/src/: lib.rs
crates/umbral-macros/tests/: display_icon.rs  form_fk_string_pk.rs  task_macro.rs
crates/umbral-testing/: CHANGELOG.md  Cargo.toml  README.md
crates/umbral-testing/src/: lib.rs
crates/umbral-testing/tests/: factory.rs  integration.rs  plugin_tables.rs  schema.rs
examples/derive-demo/: Cargo.toml  README.md
examples/hello/: Cargo.toml  README.md
examples/kenn/: .gitignore  Cargo.toml  README.md  umbra.toml
examples/read-replica/: Cargo.toml  README.md
examples/shop/: .env.sqlite  .gitignore  Cargo.toml  README.md  build.rs  umbra.toml
examples/tracker/: .env.example  .gitignore  Cargo.toml  README.md  umbral.toml
examples/umbra-tenants/: Cargo.toml
plugins/umbra-auth/: Cargo.toml
plugins/umbra-cache/: Cargo.toml
plugins/umbra-email/: Cargo.toml
plugins/umbra-health/: Cargo.toml
plugins/umbra-livereload/: Cargo.toml
plugins/umbra-logs/: Cargo.toml
umbra-cli/: Cargo.toml
umbra-cli/src/: main.rs
umbra-core/: Cargo.toml
umbra_website/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  umbra.toml
umbra_website/design/: Home.dc.html  Plugins.dc.html  Prebuilt.dc.html
umbra_website/scripts/: screenshot.js
umbra_website/src/: main.rs  seed_command.rs
umbra_website/styles/: input.css  package-lock.json  package.json  tailwind.config.js
umbra_website/templates/: 429.html  base.html  dashboard.html  home.html
umbral_website/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  secret.env  umbra.toml  umbral.toml
umbral_website/design/: Home.dc.html  Plugins.dc.html  Prebuilt.dc.html
umbral_website/scripts/: build_binary.sh  encrypt_envs.sh  screenshot.js  setup_db.sh
umbral_website/src/: main.rs  seed_command.rs
umbral_website/static/: test_json.json
umbral_website/styles/: input.css  package-lock.json  package.json
umbral_website/templates/: 404.html  base.html
(+2418 files in other folders)
