[workspace]
resolver = "3"
members = [
    "crates/umbra-core",
    "crates/umbra-macros",
    "crates/umbra",
    "crates/umbra-cli",
    # `plugins/<name>/` is added explicitly as each built-in plugin lands (M9+).
]
exclude = [
    "documentation",   # Specra docs site (SvelteKit, not a Cargo project)
    "examples",        # Each example app is a standalone Cargo project that path-deps the local umbra, NOT a workspace member; that preserves the "as if cargo-added" consumer experience.
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dalmasonto/umbra"
authors = ["Dalmas Ogembo <dalmasogembo@gmail.com>"]
rust-version = "1.85"
