[workspace]
resolver = "3"
members = [
    "umbra-core",
    "umbra-macros",
    "umbra",
    "umbra-cli",
    "umbra-testing",
    # `plugins/<name>/` is added explicitly as each built-in plugin lands (M9+).
    "../plugins/umbra-auth",
    "../plugins/umbra-admin",
    "../plugins/umbra-sessions",
    "../plugins/umbra-rest",
    "../plugins/umbra-tasks",
    "../plugins/umbra-email",
    "../plugins/umbra-openapi",
    "../plugins/umbra-signals",
    "../plugins/umbra-static",
    "../plugins/umbra-media",
    "../plugins/umbra-cache",
    "../plugins/umbra-security",
    "../plugins/umbra-rls",
    "../plugins/umbra-permissions",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dalmasonto/umbra"
authors = ["Dalmas Ogembo <dalmasogembo@gmail.com>"]
rust-version = "1.85"
