[workspace]
resolver = "3"
members = [
    "umbra-casing",
    "umbra-core",
    "umbra-macros",
    "umbra",
    "umbra-cli",
    "umbra-testing",
    # `plugins/<name>/` is added explicitly as each built-in plugin lands (M9+).
    "../plugins/umbra-auth",
    "../plugins/umbra-admin",
    "../plugins/umbra-sessions",
    "../plugins/umbra-rest",
    "../plugins/umbra-tasks",
    "../plugins/umbra-email",
    "../plugins/umbra-openapi",
    "../plugins/umbra-signals",
    "../plugins/umbra-static",
    "../plugins/umbra-media",
    "../plugins/umbra-cache",
    "../plugins/umbra-security",
    "../plugins/umbra-rls",
    "../plugins/umbra-permissions",
    "../plugins/umbra-playground",
    "../plugins/umbra-health",
    "../plugins/umbra-oauth",
    "../plugins/umbra-realtime",
    "../plugins/umbra-livereload",
    "../plugins/umbra-analytics",
    "../plugins/umbra-logs",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dalmasonto/umbra"
authors = ["Dalmas Ogembo <dalmasogembo@gmail.com>"]
rust-version = "1.85"

# Disk: keep `target/` small. The workspace has dozens of integration-test
# binaries (one per `tests/*.rs`), and the default `debug = 2` embeds full
# DWARF in every one — that alone is what drives `target/` toward ~80 GB.
# `line-tables-only` keeps panic/backtrace file:line locations (so test
# failures still point at the right line) while dropping the bulk of the
# debug info, taking the full workspace + all test binaries to ~20 GB.
# See crates/README.md "Build, test, run" for the env-var alternative and
# how to shrink the incremental cache.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
