[package]
name = "umbral_website"
version = "0.1.0"
edition = "2024"

[dependencies]

# The framework comes from crates.io, NOT from `../crates` / `../plugins`.
# That is deliberate: it makes this directory self-contained, so `deploy-website.yml`
# can ship `umbral_website/` on its own and the server's `docker compose build`
# resolves everything from the registry. A path dep would escape the Docker build
# context (`COPY ../crates` is illegal) and drag the whole workspace along.
#
# The trade-off: the website can only use framework APIs that are RELEASED.
# When you land a framework change the site needs, cut a release first, then bump
# these versions. See README.md -> "Why crates.io deps".

# ----- Framework core (always required) ------------------------------------
umbral         = "0.0.7"
umbral-cli     = "0.0.7"

# ----- Active by default ---------------------------------------------------
# What `src/main.rs` wires in. Comment any of these out only if you also remove
# the matching `.plugin(...)` line.
umbral-auth     = "0.0.7"
umbral-sessions = "0.0.7"
umbral-admin    = "0.0.7"
umbral-rest     = "0.0.7"
umbral-openapi  = "0.0.7"
umbral-security = "0.0.7"
umbral-storage  = "0.0.7"  # Unified storage: static-file serving + uploaded-file storage (local FS + S3).
umbral-playground   = "0.0.7"  # Interactive API playground UI (think mini-Postman) at /playground/.
umbral-oauth        = "0.0.7"  # OAuth / social login (Google, GitHub) + account connection.
umbral-realtime     = "0.0.7"  # SSE + WebSocket real-time push (live note feed).
umbral-livereload   = "0.0.7"  # Dev-only browser live-reload (SSE push + file watcher). Opt-in, inert outside Dev.

# ----- Available built-ins (uncomment + register in main.rs to enable) -----
# umbral-tasks        = "0.0.7"  # DB-backed background task queue (Celery-equivalent).
# umbral-permissions  = "0.0.7"  # ContentType + Group + Permission model.
# umbral-rls          = "0.0.7"  # Postgres row-level security policy registration.
umbral-cache          = "0.0.7"  # In-memory/SQLite/Redis cache + cache_page middleware.
# umbral-email        = "0.0.7"  # SMTP + MIME email composer + sender.
# umbral-signals      = "0.0.7"  # Pre/post save/delete signal dispatch.

# ----- Third-party + framework runtime deps --------------------------------
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"  # admin-notification superuser-lookup logging.
serde = { version = "1", features = ["derive"] }
serde_json = "1"  # dashboard Table widget rows are `Vec<serde_json::Value>`.
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["macros", "sqlite", "postgres", "chrono", "runtime-tokio"] }
clap = "4"          # website seed management commands.
async-trait = "0.1" # `PluginCommand` is an async trait.

# Once you `umbral startapp <plugin>` or `umbral startplugin <plugin>`, add
# the plugin crate here:
site_content = { path = "plugins/site_content" }
features = { path = "plugins/features" }
plugin_directory = { path = "plugins/plugin_directory" }
reviews = { path = "plugins/reviews" }
showcase = { path = "plugins/showcase" }
security_reports = { path = "plugins/security_reports" }
accounts = { path = "plugins/accounts" }
community = { path = "plugins/community" }
sponsor = { path = "plugins/sponsor" }
public = { path = "plugins/public" }
