[package]
name = "umbral_website"
version = "0.1.0"
edition = "2024"

# The site's plugins are workspace MEMBERS, not merely path dependencies.
#
# Cargo will happily *build* a path dependency that sits outside the workspace, but it
# refuses to *test* one: a non-member's `[dev-dependencies]` are never resolved into the
# lockfile. So `cargo test -p public` failed with "requires dev-dependencies and is not a
# member of the workspace" — and the only two plugins that hit it were the only two with
# dev-deps (public and sponsor, both wanting tokio for an async render test). Membership is
# what makes their tests runnable at all.
#
# It also means `cargo test --workspace` from this directory runs EVERY plugin's suite
# instead of just the root binary's zero tests, which is how the plugin_directory suite
# managed to rot unnoticed until it neither compiled nor passed.
#
# The framework workspace at the repo root `exclude`s this directory, so there is no
# double membership. Docker still copies `umbral_website/` whole, and the members live
# inside it, so the deploy build is unaffected.
[workspace]
members = ["plugins/*"]

[dependencies]

# The framework comes from crates.io, NOT from `../crates` / `../plugins`.
# That is deliberate: it makes this directory self-contained, so `deploy-website.yml`
# can ship `umbral_website/` on its own and the server's `docker compose build`
# resolves everything from the registry. A path dep would escape the Docker build
# context (`COPY ../crates` is illegal) and drag the whole workspace along.
#
# The trade-off: the website can only use framework APIs that are RELEASED.
# When you land a framework change the site needs, cut a release first, then bump
# these versions. See README.md -> "Why crates.io deps".

# ----- Framework core (always required) ------------------------------------
umbral = "0.0.10"
umbral-cli = "0.0.10"

# ----- Active by default ---------------------------------------------------
# What `src/main.rs` wires in. Comment any of these out only if you also remove
# the matching `.plugin(...)` line.
umbral-auth = "0.0.10"
umbral-sessions = "0.0.10"
umbral-admin = "0.0.10"
umbral-rest = "0.0.10"
umbral-openapi = "0.0.10"
umbral-security = "0.0.10"
umbral-storage = "0.0.10"  # Unified storage: static-file serving + uploaded-file storage (local FS + S3).
umbral-playground = "0.0.10"  # Interactive API playground UI (think mini-Postman) at /playground/.
umbral-oauth = "0.0.10"  # OAuth / social login (Google, GitHub) + account connection.
umbral-realtime = "0.0.10"  # SSE + WebSocket real-time push (live note feed).
umbral-livereload = "0.0.10"  # Dev-only browser live-reload (SSE push + file watcher). Opt-in, inert outside Dev.

# ----- Available built-ins (uncomment + register in main.rs to enable) -----
# umbral-tasks = "0.0.10"  # DB-backed background task queue (Celery-equivalent).
# umbral-permissions = "0.0.10"  # ContentType + Group + Permission model.
# umbral-rls = "0.0.10"  # Postgres row-level security policy registration.
umbral-cache = "0.0.10"  # In-memory/SQLite/Redis cache + cache_page middleware.
# umbral-email = "0.0.10"  # SMTP + MIME email composer + sender.
# umbral-signals = "0.0.10"  # Pre/post save/delete signal dispatch.

# ----- Third-party + framework runtime deps --------------------------------
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"  # admin-notification superuser-lookup logging.
serde = { version = "1", features = ["derive"] }
serde_json = "1"  # dashboard Table widget rows are `Vec<serde_json::Value>`.
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["macros", "sqlite", "postgres", "chrono", "runtime-tokio"] }
clap = "4"          # website seed management commands.
async-trait = "0.1" # `PluginCommand` is an async trait.

# Once you `umbral startapp <plugin>` or `umbral startplugin <plugin>`, add
# the plugin crate here:
site_content = { path = "plugins/site_content" }
features = { path = "plugins/features" }
plugin_directory = { path = "plugins/plugin_directory" }
reviews = { path = "plugins/reviews" }
showcase = { path = "plugins/showcase" }
security_reports = { path = "plugins/security_reports" }
accounts = { path = "plugins/accounts" }
community = { path = "plugins/community" }
sponsor = { path = "plugins/sponsor" }
public = { path = "plugins/public" }
