[package]
name = "umbra-cli"
description = "The `manage.py` equivalent binary for umbra (migrate, makemigrations, worker, inspectdb, ...)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
umbra = { path = "../umbra", version = "0.0.1" }
# `macros` enables `#[tokio::main]`; `rt-multi-thread` is the runtime the
# attribute expands to. No other tokio features are needed at M0.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# `App::serve` emits a `tracing::info!` line on bind. Installing a subscriber
# here turns that into visible stdout so an operator can see the server is up.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Raw sqlx for the demo seed-data path (CREATE TABLE + INSERT before
# App::build()). umbra-cli is a framework-internal binary, so depending on
# sqlx here doesn't violate the "users only depend on the umbra facade" rule:
# umbra-cli is part of umbra, not a downstream user crate.
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
