[package]
name = "umbra-cli"
description = "The `manage.py` equivalent for umbra. Library exposes `dispatch(app)` for user binaries; binary `umbra` is a global scaffolding tool (startproject / startapp)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# Two artefacts:
# - lib: `umbra_cli::dispatch(app)` is what user binaries call to host the
#   management subcommands (serve / migrate / makemigrations / ...).
# - bin `umbra`: the global scaffolding tool installed via
#   `cargo install umbra-cli` (handles startproject / startapp).
[lib]
name = "umbra_cli"
path = "src/lib.rs"

[[bin]]
name = "umbra"
path = "src/main.rs"

[dependencies]
# Shared casing helpers (pascal_case_from_ident for scaffold).
umbra-casing = { path = "../umbra-casing", version = "0.0.1" }
umbra = { path = "../umbra", version = "0.0.1" }
# umbra-cli is internal — depending on umbra-core directly is fine. We
# reach for `umbra_core::settings::get()` to read the bind_addr from
# the live settings after `App::build` published them.
umbra-core = { path = "../umbra-core", version = "0.0.1" }
# `macros` enables `#[tokio::main]`; `rt-multi-thread` is the runtime the
# attribute expands to. No other tokio features are needed at M0.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# `App::serve` emits a `tracing::info!` line on bind. Installing a subscriber
# here turns that into visible stdout so an operator can see the server is up.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Raw sqlx for the demo seed-data path (CREATE TABLE + INSERT before
# App::build()). umbra-cli is a framework-internal binary, so depending on
# sqlx here doesn't violate the "users only depend on the umbra facade" rule:
# umbra-cli is part of umbra, not a downstream user crate.
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
# `derive` so the subcommand enum picks up Parser/Subcommand impls. The
# CLI is the only place clap shows up; the facade stays free of it.
clap = { version = "4", features = ["derive"] }
# CSV parsing for the `importcsv` command (#61). Same crate the REST
# plugin uses for the `?format=csv` export, so import/export share quoting
# / escaping behaviour.
csv = "1"

[dev-dependencies]
tempfile = "3"
# For the plugin-command dispatch smoke test in tests/dispatch_smoke.rs.
async-trait = "0.1"
