[package]
name = "umbra-core"
description = "umbra internals: ORM, migrations, routing, DB backends, the Plugin trait. Do not depend on this directly; use the `umbra` facade."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = ["sqlx-sqlite", "with-chrono", "with-uuid"] }
serde = { version = "1", features = ["derive"] }
# JSON serde for migration files (Snapshot + MigrationFile) and snapshot
# hashing input.
serde_json = "1"
# SHA-256 for snapshot_hash drift detection in the umbra_migrations
# tracking table.
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
tokio = "1"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
# figment::Jail (for env-var and toml file sandboxing in tests) lives behind
# the "test" feature.
figment = { version = "0.10", features = ["test"] }
# Isolated per-test scratch directories for the migrate integration tests
# (declare -> migrate -> change -> migrate loop reads and writes JSON files,
# so each test needs its own dir to stay independent of test order).
tempfile = "3"
# tokio macros enable #[tokio::test] for async tests; rt is the runtime.
# `sync` carries tokio::sync::OnceCell, which the migrate integration tests
# use to boot App::build() exactly once across tokio::test cases that share
# the same process.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
# umbra (the facade) is needed in tests/ because #[derive(Model)] emits
# `::umbra::orm::*` paths and those have to resolve at the integration-test
# layer. Dev-dep only — doesn't propagate to release builds, so the
# umbra-core → umbra arrow this introduces (alongside the release-time
# umbra → umbra-core arrow) is a non-cycle by Cargo's rules.
umbra = { path = "../umbra" }
