[package]
name = "umbra-core"
description = "umbra internals: ORM, migrations, routing, DB backends, the Plugin trait. Do not depend on this directly; use the `umbra` facade."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
# tower is the Service/Layer trait core that axum builds on. We need
# it as a regular (not dev) dep because the trailing-slash redirect
# layer in `crate::slash` implements `tower::Layer` + `tower::Service`.
tower = { version = "0.5", default-features = false }
# tower-http's `catch-panic` is what powers `AppBuilder::
# server_error_template` — a middleware that converts a panicking
# handler into a rendered template response instead of a process-level
# panic. Cheap to add; we'd want it eventually for static-files and
# trace support anyway.
tower-http = { version = "0.6", default-features = false, features = ["catch-panic", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "string"] }
async-trait = "0.1"
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "toml"] }
sea-query = { version = "0.32", features = ["with-json", "with-ipnetwork", "with-mac_address", "with-rust_decimal"] }
sea-query-binder = { version = "0.7", features = ["sqlx-sqlite", "sqlx-postgres", "with-chrono", "with-uuid", "with-json", "with-ipnetwork", "with-mac_address", "with-rust_decimal"] }
serde = { version = "1", features = ["derive"] }
# JSON serde for migration files (Snapshot + MigrationFile) and snapshot
# hashing input.
serde_json = "1"
# SHA-256 for snapshot_hash drift detection in the umbra_migrations
# tracking table.
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "postgres", "any", "runtime-tokio", "chrono", "uuid", "json", "ipnetwork", "mac_address", "rust_decimal"] }
# BUG-10: NUMERIC field type backed by `rust_decimal::Decimal`. The
# sqlx + sea-query features above enable Encode/Decode/Type; this
# direct dep is so user code (and generated `models.rs` from
# inspectdb) can name the type without going through sqlx's
# transitive re-export.
rust_decimal = { version = "1", default-features = false, features = ["serde-with-str"] }
# Postgres network address types — Phase 4.4. `ipnetwork::IpNetwork`
# is the Rust type for both INET and CIDR (the latter is just a
# constraint-restricted host address). The sqlx ipnetwork feature
# above enables Decode/Encode/Type; this direct dep is so user code
# (and the generated `models.rs` from inspectdb) can name the type
# without depending on sqlx's transitive re-export.
ipnetwork = { version = "0.20", features = ["serde"] }
# Postgres MACADDR — Phase 4.4. The `mac_address::MacAddress` type
# pairs with sqlx's `mac_address` feature.
mac_address = { version = "1", features = ["serde"] }
# Jinja2-compatible template engine. Runtime templates so admin pages can
# be overridden by placing a same-named file higher in the search path,
# per the outline at docs/specs/outlines/templates.md. Default features
# only; we don't need debug rendering or speedups.
minijinja = "2"
# `toml::Value` is the storage type for `Settings.extra`. Figment
# pulls toml in transitively but doesn't re-export it; the direct dep
# keeps the public API of `Settings` stable when figment internals
# move.
toml = "0.8"
tokio = "1"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
# figment::Jail (for env-var and toml file sandboxing in tests) lives behind
# the "test" feature.
figment = { version = "0.10", features = ["test"] }
# Isolated per-test scratch directories for the migrate integration tests
# (declare -> migrate -> change -> migrate loop reads and writes JSON files,
# so each test needs its own dir to stay independent of test order).
tempfile = "3"
# tokio macros enable #[tokio::test] for async tests; rt is the runtime.
# `sync` carries tokio::sync::OnceCell, which the migrate integration tests
# use to boot App::build() exactly once across tokio::test cases that share
# the same process.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
# tower::ServiceExt::oneshot drives a single synthetic request through the
# merged axum::Router in `tests/plugin_contract.rs` so the plugin-routes-
# mount-under-the-app-router check doesn't need a real TCP listener.
tower = { version = "0.5", features = ["util"] }
# http::Request / Response shape for the same oneshot path. axum re-exports
# the types but the trait bound on `oneshot` wants the concrete `http::*`
# types, so a direct dev-dep keeps the call site short.
http = "1"
http-body-util = "0.1"
# umbra (the facade) is needed in tests/ because #[derive(Model)] emits
# `::umbra::orm::*` paths and those have to resolve at the integration-test
# layer. Dev-dep only — doesn't propagate to release builds, so the
# umbra-core → umbra arrow this introduces (alongside the release-time
# umbra → umbra-core arrow) is a non-cycle by Cargo's rules.
umbra = { path = "../umbra" }
