[package]
name = "umbra"
description = "A Django-shape web framework for Rust. The facade: re-exports umbra-core and umbra-macros as one stable surface (`use umbra::prelude::*`)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
umbra-core = { path = "../umbra-core", version = "0.0.1" }
umbra-macros = { path = "../umbra-macros", version = "0.0.1" }
# Re-exported by the facade as `umbra::templates::context!` so user
# crates don't need a direct minijinja dep just to build a render
# context. The engine itself lives in umbra-core; this is the macro
# only.
minijinja = "2"
# Re-exported as `umbra::_serde_json` so macro-generated code (the
# `HydrateRelated` impl from `#[derive(Model)]`) can reference
# `serde_json::Value` and `from_value` without requiring user crates
# to declare a direct `serde_json` dep.
serde_json = "1"
